src/objects/Relationship_Status__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relationship Status</relationshipLabel>
        <relationshipName>Relationship_Status</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status_Summary__c</fullName>
        <label>Status Summary</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Week_Ending_Date__c</fullName>
        <label>Week Ending Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Relationship Status</label>
    <nameField>
        <displayFormat>RS-{000000}</displayFormat>
        <label>Relationship Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relationship Status</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>